fixed spacing (again)

--- a/index.css
+++ b/index.css
@@ -389,10 +389,8 @@
 .projectDescription {
 	height: 114px !important;
 	padding-bottom: 2px;
-}
-
-.projectDescription p{
-	margin-top: 0 !important;
+	margin-bottom: 20px;
+    overflow: hidden;
 }
 
 .programmingClass {
@@ -418,8 +416,10 @@
 }
 
 .projectStats {
-	display: flex;
-	justify-content: space-between;
+	clear: both;
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .download {
